[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "zymera_env"
version = "0.0.1"
description = "JAX-native heterogeneous MARL framework for adversarial-robustness research"
requires-python = ">=3.10"
dependencies = [
    "jax>=0.4",
    "jaxlib>=0.4",
    "equinox>=0.11",
    "optax>=0.1",
    "chex>=0.1",
    "numpy",
    "msgspec>=0.18",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.0",
    "pyright>=1.1",
    "ruff>=0.5",
]
viz = [
    "matplotlib>=3.5",
    "pillow",
]

[project.scripts]
zymera-viz  = "zymera.viz.render:main"
zymera-keys = "zymera.viz.live:main"

[tool.setuptools.packages.find]
include = ["zymera*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
